test/expected/limited_trust/2.alias.exposing/binding/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: "2020-03-03T02:40:49Z"
  generation: 1
  labels:
    mesh: limited-trust
  name: istio-limited-trust-helloworld-intermesh
  namespace: limited-trust
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceBinding
    name: helloworld
    uid: 63fb741d-5cf8-11ea-bca4-be6eb315559a
  resourceVersion: "53790724"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/limited-trust/gateways/istio-limited-trust-helloworld-intermesh
  uid: 64629ce8-5cf8-11ea-b294-aaa2fadece5a
spec:
  selector:
    emcee: egressgateway
  servers:
  - hosts:
    - helloworld.default.svc.cluster.local
    port:
      name: tls
      number: 443
      protocol: TLS
    tls:
      caCertificates: /etc/certs/root-cert.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      serverCertificate: /etc/certs/cert-chain.pem
