test/expected/limited_trust/2.alias.exposing/binding/mfc.yaml
apiVersion: mm.ibm.istio.io/v1
kind: MeshFedConfig
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"mm.ibm.istio.io/v1","kind":"MeshFedConfig","metadata":{"annotations":{},"labels":{"fed-config":"limited-trust","secret":"cluster1"},"name":"limited-trust","namespace":"limited-trust"},"spec":{"egress_gateway_port":443,"egress_gateway_selector":{"emcee":"egressgateway"},"ingress_gateway_port":15443,"ingress_gateway_selector":{"emcee":"ingressgateway"},"mode":"BOUNDARY","tls_context_selector":{"mesh":"limited-trust","secret":"cluster1"},"use_egress_gateway":true,"use_ingress_g [...]
  creationTimestamp: "2020-03-03T02:40:47Z"
  finalizers:
  - mm.ibm.istio.io
  generation: 2
  labels:
    fed-config: limited-trust
    secret: cluster1
  name: limited-trust
  namespace: limited-trust
  resourceVersion: "53790684"
  selfLink: /apis/mm.ibm.istio.io/v1/namespaces/limited-trust/meshfedconfigs/limited-trust
  uid: 635b261f-5cf8-11ea-a6e3-d25a297f6585
spec:
  egress_gateway_port: 443
  egress_gateway_selector:
    emcee: egressgateway
  ingress_gateway_port: 15443
  ingress_gateway_selector:
    emcee: ingressgateway
  mode: BOUNDARY
  tls_context_selector:
    mesh: limited-trust
    secret: cluster1
  use_egress_gateway: true
  use_ingress_gateway: true
status: {}
