test/expected/limited_trust/2.alias.exposing/binding/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: "2020-03-03T02:40:49Z"
  generation: 1
  labels:
    mesh: limited-trust
    role: local-to-egress
  name: helloworld
  namespace: default
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceBinding
    name: helloworld
    uid: 63fb741d-5cf8-11ea-bca4-be6eb315559a
  resourceVersion: "53790758"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/virtualservices/helloworld
  uid: 6484a63d-5cf8-11ea-b294-aaa2fadece5a
spec:
  exportTo:
  - .
  hosts:
  - helloworld
  http:
  - match:
    - port: 5000
      uri:
        prefix: /
    rewrite:
      uri: /default/helloworld/
    route:
    - destination:
        host: istio-limited-trust-egress-443.limited-trust.svc.cluster.local
        port:
          number: 443
        subset: helloworld-intermesh
